--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,8 +6,8 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button color="light" (click)="showUserPopover($event)">
-        <ion-icon name="contact"></ion-icon>
+      <ion-button color="light" (click)="doLogout()">
+        <ion-icon name="power"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>
