--- a/src/global.scss
+++ b/src/global.scss
@@ -10,23 +10,5 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-
-ion-toolbar {
-   box-shadow: 0px 0px 10px rgba(0,0,0,.8);
-   --background: var(--ion-color-black);
-   color: var(--ion-color-light);
-}
-
-ion-tab-bar {
-    box-shadow: 0px 0px 10px rgba(0,0,0,.8);
-    --background: var(--ion-color-black);
-    color: var(--ion-color-light);
- }
-
- .disclaimer {
-    color: var(--ion-color-light);
-    z-index: 9;
-    font-size: 10px;
-    text-align: center;
-    font-weight: 500;
- }
+@import './theme/common.scss';
+@import './theme/side-menu.scss';
