--- a/src/theme/side-menu.scss
+++ b/src/theme/side-menu.scss
@@ -7,6 +7,7 @@
         .user {
             background: var(--ion-color-black);
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 1);
+
             ion-icon {
                 font-size: 9rem;
             }
@@ -21,6 +22,10 @@
             --background: var(--ion-color-dark);
             color: var(--ion-color-light);
             --inner-border-width: 0;
+
+            ion-icon {
+                color: var(--ion-color-light);
+            }
         }
     }
 }
