--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -21,20 +21,37 @@
     <ion-row no-padding>
       <ion-col no-padding offset-md="2" size-md="8" size="12" offset-lg="3" size-lg="6">
 
-        <!-- <ion-card class="transparent-card">
+        <ion-card class="transparent-card">
           <ion-card-content no-padding>
-            <ion-item>
-              <ion-label>Action Sheet</ion-label>
-              <ion-select [interfaceOptions]="customActionSheetOptions" interface="action-sheet" placeholder="Select One">
-                <ion-select-option value="red">Red</ion-select-option>
-                <ion-select-option value="purple">Purple</ion-select-option>
-                <ion-select-option value="yellow">Yellow</ion-select-option>
-                <ion-select-option value="orange">Orange</ion-select-option>
-                <ion-select-option value="green">Green</ion-select-option>
-              </ion-select>
-            </ion-item>
+            <ion-row no-padding>
+              <ion-col no-padding size="6">
+                <ion-item>
+                  <ion-label>Top</ion-label>
+                  <ion-select [interfaceOptions]="customActionSheetOptions" interface="action-sheet" placeholder="10"
+                    [(ngModel)]="limit" (ionChange)="getData()">
+                    <ion-select-option value="10">10</ion-select-option>
+                    <ion-select-option value="20">20</ion-select-option>
+                    <ion-select-option value="30">30</ion-select-option>
+                    <ion-select-option value="40">40</ion-select-option>
+                    <ion-select-option value="50">50</ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </ion-col>
+
+              <ion-col no-padding size="6">
+                <ion-item>
+                  <ion-label>Currency</ion-label>
+                  <ion-select [interfaceOptions]="customActionSheetOptions" interface="action-sheet" placeholder="USD"
+                    [(ngModel)]="currency" (ionChange)="getData()">
+                    <ion-select-option value="USD">USD</ion-select-option>
+                    <ion-select-option value="INR">INR</ion-select-option>
+                    <ion-select-option value="EUR">EUR</ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </ion-col>
+            </ion-row>
           </ion-card-content>
-        </ion-card> -->
+        </ion-card>
 
         <ion-card class="listItem-card" *ngFor="let listItem of listingData">
           <ion-card-header>
@@ -90,7 +107,7 @@
   </ion-grid>
 
   <div class="disclaimer">
-    This webiste is for demo puposes only and demostrates an app with limited functionality.<br />
+    This website is for demo puposes only and demostrates an app with limited functionality.<br />
     Copyright © 2018. All rights reserved
   </div>
 
