--- a/src/app/pages/list/list.page.scss
+++ b/src/app/pages/list/list.page.scss
@@ -25,6 +25,10 @@
         ion-item {
             --background: transparent;
             color: var(--ion-color-light);
+
+            ion-label {
+                flex: none;
+            }
         }
     }
 
