--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,12 @@
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
+
+      <div class="side-menu-logout-div">
+        <ion-button fill="clear" (click)="doLogout()">
+          Logout
+        </ion-button>
+      </div>
     </ion-content>
   </ion-menu>
   <ion-router-outlet main></ion-router-outlet>
