--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -5,10 +5,11 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button color="light" (click)="doLogout()">
-        <ion-icon name="power"></ion-icon>
+      <ion-button color="light" (click)="goToSettings()">
+        <ion-icon name="settings"></ion-icon>
       </ion-button>
     </ion-buttons>
+
     <ion-title>
       Top Cryptocurrencies by Market Capitalization
     </ion-title>
@@ -41,8 +42,8 @@
               <ion-col no-padding size="6">
                 <ion-item>
                   <ion-label>Currency</ion-label>
-                  <ion-select [interfaceOptions]="customActionSheetOptionsCurrency" interface="action-sheet" placeholder="USD"
-                    [(ngModel)]="currency" (ionChange)="getData()">
+                  <ion-select [interfaceOptions]="customActionSheetOptionsCurrency" interface="action-sheet"
+                    placeholder="USD" [(ngModel)]="currency" (ionChange)="getData()">
                     <ion-select-option value="USD">USD</ion-select-option>
                     <ion-select-option value="INR">INR</ion-select-option>
                     <ion-select-option value="EUR">EUR</ion-select-option>
